Fix scrolling issue with overflow

--- a/stanford/frontend/static/dashboard/index.css
+++ b/stanford/frontend/static/dashboard/index.css
@@ -27,7 +27,7 @@ body {
 
 html {
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .navbar .container { min-height: 273px; }
